syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

package contract.dto;

message NoteDto {
  string note_id = 1;
  string text = 2;
  string note_type_id = 3;
  string time_slot_id = 4;
  google.protobuf.Timestamp time_stamp = 5;

  // Optional nested NoteTypeDto could be added later if needed
}
